spacing fix

--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ a.session-card {
 }
 
 #talks {
-    padding-top: 80px;
+    padding-top: 10px;
 }
 
 .talks-grid {
